--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-/** default styles for the page */
+/** This is  the default styles for the page */
 body {
   Font-family: 'Unbounded', Helvetica, Arial, sans-serif;
   width: 100%;
